--- a/app/src/main/res/layout/activity_servicios.xml
+++ b/app/src/main/res/layout/activity_servicios.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="Fotografia"
         android:text="@string/BotonFotografia"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="ANR"
         android:text="SERVICIO-ASYNC TASTK - THREAD"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="GPS"
         android:text="GPS"
         app:layout_constraintEnd_toEndOf="parent"
