--- a/app/src/main/res/layout/activity_tienda_mascotas.xml
+++ b/app/src/main/res/layout/activity_tienda_mascotas.xml
@@ -43,7 +43,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="32dp"
         android:background="#9F9696"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:ems="10"
         android:hint="ingrese correo electronico"
         android:inputType="textPersonName"
@@ -59,8 +59,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:background="@color/purple_200"
-        android:backgroundTint="@color/purple_200"
+        android:background="#004BCC"
+        android:backgroundTint="#004BCC"
         android:ems="10"
         android:hint="ingrese contraseña"
         android:inputType="textPassword"
@@ -76,10 +76,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="Check"
         android:text="Iniciar sesion"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +92,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="Formulario"
         android:text="Formulario Registro"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#004BCC"
         android:onClick="Productos"
         android:text="Adopta un amigo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="#A621B5"
+        android:background="#004BCC"
         android:onClick="@string/BotonServicios"
         android:text="@string/BotonServicios"
         app:layout_constraintEnd_toEndOf="parent"
