--- a/app/src/main/res/layout/activity_fotografia_master.xml
+++ b/app/src/main/res/layout/activity_fotografia_master.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:backgroundTint="#004BCC"
         android:onClick="tomarFoto"
         android:text="TOMAR FOTO"
         app:layout_constraintEnd_toEndOf="parent"
