--- a/app/src/main/res/layout/activity_servicios.xml
+++ b/app/src/main/res/layout/activity_servicios.xml
@@ -11,16 +11,15 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@color/white"
-        android:text="TextView"
+        android:text="SERVICIOS"
         android:textColor="#673AB7"
         android:textColorHighlight="#00FFFFFF"
-        android:textSize="24sp"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="SERVICIOS PETS" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button4"
@@ -30,6 +29,7 @@
         android:backgroundTint="#004BCC"
         android:onClick="Fotografia"
         android:text="@string/BotonFotografia"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -42,6 +42,7 @@
         android:backgroundTint="#004BCC"
         android:onClick="ANR"
         android:text="SERVICIO-ASYNC TASTK - THREAD"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
@@ -50,11 +51,13 @@
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#004BCC"
         android:onClick="GPS"
         android:text="GPS"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="235dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
 </android.support.constraint.ConstraintLayout>
